some link fixes

--- a/index.html
+++ b/index.html
@@ -367,14 +367,14 @@
             <div class="footer__inner">
                 <div class="footer__top">
                     <div class="footer__name">
-                        Sin Web
+                        <img  src="./img/sign.svg" alt="">
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
-                        <li class="footer__list-item"> <a href="#"> Главная</a></li>
-                        <li class="footer__list-item"> <a href="#"> Обо мне</a></li>
-                        <li class="footer__list-item"> <a href="#"> Услуги</a></li>
-                        <li class="footer__list-item"> <a href="#"> Работы</a></li>
+                        <li class="footer__list-item"> <a href="./index.html"> Главная</a></li>
+                        <li class="footer__list-item"> <a href="./about.html"> Обо мне</a></li>
+                        <li class="footer__list-item"> <a href="./servises.html"> Услуги</a></li>
+                        <li class="footer__list-item"> <a href="./portfolio.html"> Работы</a></li>
                     </ul>
                     <ul class="footer__list-servises">
                         <li class="footer__list-title">УСЛУГИ</li>
