some corrections on all page

--- a/about.html
+++ b/about.html
@@ -75,7 +75,20 @@
                         услуги в Интернете и помочь вам.
                     </p>
                 </div>
+                <div class="page-content__text">
+                    <div class="page-content__text__subtitle page-content__text__subtitle-bottom-border text__item">
+                        ЦИТАТА
+                    </div>
+                    <h2 class="page-content__text__title text__item"> Что бы прийдти к намеченой цели нужно правильно построить маршрут и выбрать попутчиков</h2>
+                    <p class="page-content__text__p text__item">
+                        
+                    </p>
+                    <p class="page-content__text__p text__item">
+                        
+                    </p>
+                </div>
             </section>
+
             <section class="skills-section">
                 <div class="skills-section__text">
                     <div class="skills-section__text__title text__item">
@@ -320,7 +333,7 @@
             <div class="footer__inner">
                 <div class="footer__top">
                     <div class="footer__name">
-                       <img  src="./img/sign.svg" alt="">
+                        <img  src="./img/sign.svg" alt="">
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
