--- a/servises.html
+++ b/servises.html
@@ -164,6 +164,9 @@
                     </div>
                 </div>
             </section>
+            <section class="banner">
+                
+            </section>
         </div>
     </main>
     <footer class="footer">
