--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h2 class="servises__title">
                         Чем я могу Вам помочь
                     </h2>
-                    <div class="servises__items">
+                    <div class="servises__items center">
                         <div class="servises__item" href="#">
                             <img class="servises__item-svg" src="./img/website.svg" alt="">
                             <div class="item__title">
@@ -310,20 +310,23 @@
                     <h2 class="testimonials__title">
                         Что говорят мои клиенты
                     </h2>
-                    <div class="testimonials__items">
+                    <div class="testimonials__items center">
                         <div class="testimonials__item" href="#">
                             <img class="testimonials__item-icon item__icon" src="./img/star.svg" alt="">
                             <p class="testimonials__item-text item__text">
-                                Outsource your digital marketing efforts, instead of handling in-house. They can provide
-                                your business with a variety. </p>
-                            <div class="testimonials__item-name">
-                                Александр
-                            </div>
-                            <div class="testimonials__item-company item__text">
-                                компания
+                                Provide your business with a variety of digital solutions to promote your product or
+                                service
+                                online. </p>
+                            <div class="testimonials__item-bottom">
+                                <div class="testimonials__item-name">
+                                    Петя
+                                </div>
+                                <div class="testimonials__item-company item__text">
+                                    компания
+                                </div>
                             </div>
                         </div>
-                        <div class="testimonials__item testimonials__item-middle" href="#">
+                        <div class="testimonials__item" href="#">
                             <img class="testimonials__item-icon item__icon" src="./img/star.svg" alt="">
                             <p class="testimonials__item-text item__text">
                                 A digital agency is a business you hire to outsource your digital marketing efforts,
@@ -331,12 +334,47 @@
                                 of handling in-house. They can provide your business with a variety of digital
                                 solutions.
                             </p>
-                            <div class="testimonials__item-name">
-                                Игорь
+                            <div class="testimonials__item-bottom">
+                                <div class="testimonials__item-name">
+                                    Петя
+                                </div>
+                                <div class="testimonials__item-company item__text">
+                                    компания
+                                </div>
                             </div>
-                            <div class="testimonials__item-company item__text">
-                                компания
-
+                        </div>
+                        <div class="testimonials__item" href="#">
+                            <img class="testimonials__item-icon item__icon" src="./img/star.svg" alt="">
+                            <p class="testimonials__item-text item__text">
+                                A digital agency is a business you hire to outsource your digital marketing efforts,
+                                instead
+                                of handling in-house. They can provide your business with a variety of digital
+                                solutions.
+                            </p>
+                            <div class="testimonials__item-bottom">
+                                <div class="testimonials__item-name">
+                                    Петя
+                                </div>
+                                <div class="testimonials__item-company item__text">
+                                    компания
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonials__item" href="#">
+                            <img class="testimonials__item-icon item__icon" src="./img/star.svg" alt="">
+                            <p class="testimonials__item-text item__text">
+                                A digital agency is a business you hire to outsource your digital marketing efforts,
+                                instead
+                                of handling in-house. They can provide your business with a variety of digital
+                                solutions.
+                            </p>
+                            <div class="testimonials__item-bottom">
+                                <div class="testimonials__item-name">
+                                    Петя
+                                </div>
+                                <div class="testimonials__item-company item__text">
+                                    компания
+                                </div>
                             </div>
                         </div>
                         <div class="testimonials__item" href="#">
@@ -346,12 +384,13 @@
                                 service
                                 online.
                             </p>
-
-                            <div class="testimonials__item-name">
-                                Петя
-                            </div>
-                            <div class="testimonials__item-company item__text">
-                                компания
+                            <div class="testimonials__item-bottom">
+                                <div class="testimonials__item-name">
+                                    Петя
+                                </div>
+                                <div class="testimonials__item-company item__text">
+                                    компания
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -367,7 +406,7 @@
             <div class="footer__inner">
                 <div class="footer__top">
                     <div class="footer__name">
-                        <img  src="./img/sign.svg" alt="">
+                        <img src="./img/sign.svg" alt="">
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
@@ -392,8 +431,8 @@
                                     <img src="./img/icon/whatsapp.svg" alt="whatsapp logo"></a>
                                 <a href="https://www.twitter.com/siniytsin" class="ball ball-3">
                                     <img src="./img/icon/twitter.svg" alt="twitter logo"></a>
-                                    <a href="https://github.com/siniytzin" class="ball ball-4">
-                                        <img src="./img/icon/github.svg" alt="github logo"></a>
+                                <a href="https://github.com/siniytzin" class="ball ball-4">
+                                    <img src="./img/icon/github.svg" alt="github logo"></a>
                             </div>
                             <div class="cover"><span></span></div>
                         </div>
@@ -412,4 +451,11 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"
+        integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
