added portfolio page

--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
                         <li class="footer__list-item"> <a href="#"> Модернизация сайта</a></li>
                     </ul>
                     <div class="social__icons">
+                        <span class="social__icons__title">Социальные сети</span>
                         <div class="drawer">
                             <div class="box">
                                 <a href="https://t.me/siniytsin" class="ball ball-1">
