--- a/servises.html
+++ b/servises.html
@@ -174,7 +174,7 @@
             <div class="footer__inner">
                 <div class="footer__top">
                     <div class="footer__name">
-                        <img  src="./img/sign.svg" alt="">
+                        <img src="./img/sign.svg" alt="">
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
@@ -191,6 +191,7 @@
                         <li class="footer__list-item"> <a href="#"> Модернизация сайта</a></li>
                     </ul>
                     <div class="social__icons">
+                        <span class="social__icons__title">Социальные сети</span>
                         <div class="drawer">
                             <div class="box">
                                 <a href="https://t.me/siniytsin" class="ball ball-1">
