--- a/about.html
+++ b/about.html
@@ -333,7 +333,7 @@
             <div class="footer__inner">
                 <div class="footer__top">
                     <div class="footer__name">
-                        <img  src="./img/sign.svg" alt="">
+                        <img src="./img/sign.svg" alt="">
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
@@ -350,6 +350,7 @@
                         <li class="footer__list-item"> <a href="#"> Модернизация сайта</a></li>
                     </ul>
                     <div class="social__icons">
+                        <span class="social__icons__title">Социальные сети</span>
                         <div class="drawer">
                             <div class="box">
                                 <a href="https://t.me/siniytsin" class="ball ball-1">
@@ -358,8 +359,8 @@
                                     <img src="./img/icon/whatsapp.svg" alt="whatsapp logo"></a>
                                 <a href="https://www.twitter.com/siniytsin" class="ball ball-3">
                                     <img src="./img/icon/twitter.svg" alt="twitter logo"></a>
-                                    <a href="https://github.com/siniytzin" class="ball ball-4">
-                                        <img src="./img/icon/github.svg" alt="github logo"></a>
+                                <a href="https://github.com/siniytzin" class="ball ball-4">
+                                    <img src="./img/icon/github.svg" alt="github logo"></a>
                             </div>
                             <div class="cover"><span></span></div>
                         </div>
