added links to buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav__link" href="./portfolio.html">Работы</a>
                     </div>
                 </nav>
-                <button class="header__button button">
+                <button onclick="document.location='./index.html'" class="header__button button">
                     СВЯЗАТЬСЯ
                 </button>
             </div>
@@ -64,7 +64,7 @@
                             его
                             представления в сети.
                         </p>
-                        <button class="greeting__button button">
+                        <button onclick="document.location='./portfolio.html'" class="greeting__button button">
                             МОИ РАБОТЫ
                         </button>
                     </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="servises__bottom">
                         <div class="bottom__text">Хотите больше услуг?</div>
-                        <a href="#" class="footer__link"> Перейти</a>
+                        <a href="./servises.html" class="footer__link"> Перейти</a>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
                                     Последние работы
                                 </h2>
                             </div>
-                            <button class="works__button button">
+                            <button onclick="document.location='./portfolio.html'" class="works__button button">
                                 СМОТРЕТЬ ВСЕ
                             </button>
                         </div>
@@ -180,9 +180,9 @@
                                 <div class="card__subtitle">лендинг</div>
                                 <h3 class="card__title">Настройка-телескопа.рф</h3>
                             </a>
-                            <a class="card_item2 card" href="https://fraktality.com/">
+                            <a class="card_item2 card" href="https://fraktality.art/">
                                 <div class="card__subtitle">интернет-магазин</div>
-                                <h3 class="card__title">Fraktality.com</h3>
+                                <h3 class="card__title">Fraktality.art</h3>
                             </a>
                             <a class="card_item3 card" href="https://spellpic.com/">
                                 <div class="card__subtitle">интернет-магазин</div>
@@ -218,7 +218,7 @@
                                 Готов для долгосрочного партнерства и работы в качестве расширения команды
                                 заказчика.
                             </p>
-                            <button class="middle__button button">
+                            <button onclick="document.location='./about.html'" class="middle__button button">
                                 ОБО МНЕ
                             </button>
                         </div>
@@ -261,7 +261,7 @@
                             его
                             представления в сети.
                         </p>
-                        <button class="greeting__button button">
+                        <button onclick="document.location='./portfolio.html'" class="greeting__button button">
                             МОИ РАБОТЫ
                         </button>
                     </div>
@@ -293,7 +293,7 @@
                             <img class="get-started__svg-item" src="./img/get-started.svg" alt="">
                         </div>
                     </div>
-                    <button class="get-started__button button">
+                    <button onclick="document.location='./index.html'" class="get-started__button button">
                         Связаться
                     </button>
 
@@ -394,7 +394,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="testimonials__button button">
+                    <button onclick="document.location='./portfolio.html'" class="testimonials__button button">
                         Смотреть проекты
                     </button>
                 </div>
