correction of adaptability

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                         <a class="nav__link" href="./portfolio.html">Работы</a>
                     </div>
                 </nav>
-                <button onclick="document.location='./index.html'" class="header__button button">
+                <button onclick="document.location='./contact.html'" class="header__button button">
                     СВЯЗАТЬСЯ
                 </button>
             </div>
@@ -88,7 +88,6 @@
                     </p>
                 </div>
             </section>
-
             <section class="skills-section">
                 <div class="skills-section__text">
                     <div class="skills-section__text__title text__item">
