--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                         <a class="nav__link" href="./portfolio.html">Работы</a>
                     </div>
                 </nav>
-                <button onclick="document.location='./contact.html'" class="header__button button">
+                <button onclick="document.location='./index.html'" class="header__button button">
                     СВЯЗАТЬСЯ
                 </button>
             </div>
@@ -51,12 +51,19 @@
         <div class="container">
             <section class="page-header">
                 <div class="page-header__title">
-                    Работы
+                    Связаться
                 </div>
                 <div class="page-header__subtitle">
-                    Законченые проекты. Описание задач и их решений.
+                    Выберите любой способ чтобы начать действовать.
                 </div>
             </section>
+            <section class="contact-content">
+              <div class="contact-content__get-in-touch">
+                <div class="contact-content__form">
+
+                </div>
+              </div>
+          </section>
         </div>
     </main>
     <footer class="footer">
