--- a/servises.html
+++ b/servises.html
@@ -40,7 +40,7 @@
                         <a class="nav__link" href="./portfolio.html">Работы</a>
                     </div>
                 </nav>
-                <button onclick="document.location='./index.html'" class="header__button button">
+                <button onclick="document.location='./contact.html'" class="header__button button">
                     СВЯЗАТЬСЯ
                 </button>
             </div>
