--- a/portfolio.html
+++ b/portfolio.html
@@ -110,11 +110,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"
-        integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
+    <script src="./js/jquery360.js"></script>
+    <script src="./js/jquery-ui.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
